[package]
name = "open-access"
version = "0.1.0"
description = "Maintain a repository of local open access publications with searchable metadata."
edition = "2021"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
clap = { version = "4.3.19", features = ["derive", "unstable-doc"] }
derive_more = "0.99.17"
directories-next = "2.0.0"
reqwest = "0.11.18"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"

[dev-dependencies]
test-case = "3.1.0"
