[workspace]
resolver = "2"
members = [
  "cli",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# local crates:
open-access = { path = "./cli" }

# remote crates:
anyhow = "1.0.72"
async-trait = "0.1.72"
clap = "4.3.19"
derive_more = "0.99.17"
directories-next = "2.0.0"
reqwest = "0.11.18"
test-case = "3.1.0"
thiserror = "1.0.44"
tokio =  "1.29.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.4.0"
